
NEW FEATURES

    o scan_sequences(..., threshold.type) option: 'logodds.abs'. Allows
      the exact threshold scores to be provided.

    o compare_motifs() option: 'min.position.ic'. Prevent low-IC positions in
      an alignment from contributing to the final alignment score.

    o Motif comparison metrics: average log-likelihood ratio (ALLR) and mean
      ALLR (MALLR).

MINOR CHANGES

    o Removed 'random' shuffling method.

    o Using RcppThread instead of BiocParallel in several functions:
      compare_motifs(), create_sequences(), get_bkg(), motif_pvalue(),
      scan_sequences(), shuffle_sequences(). This means parallelization can
      occur within C++ code which is much faster than having to jump between
      R and C++. Currently motif_peaks(), read_motifs() and write_motifs()
      are the only remaining functions which offer optional BiocParallel
      usage.

    o Many performance improvements to functions relying on internal C++ code.

    o Changed behaviour of make_DBscores(). Re-calculated internal P-value
      databases. The old database scores from v1.0.0 can be still be used
      via the 'db.version' option in compare_motifs().

    o For merge_motifs(..., use.type): now only accepts 'PPM'.

    o When comparing all motifs to all motifs with the SW method in
      compare_motifs(), the diagonal entries now properly show the max
      possible similarity score.

    o New internal merge_motifs() implementation. This also fixes a previous bug
      with incorrect PPM averaging.

CHANGES IN VERSION 1.2.1
------------------------

BUG FIXES

    o Mispelled variable in enrich_motifs()

CHANGES IN VERSION 1.2.0
------------------------

NEW FEATURES

    o New motif_peaks() function: test for significantly overrepresented peaks
      of motif sites in a set of sequences.

    o New get_bkg() function: calculate background frequencies of sequence
      alphabets, including higher order backgrounds. Works for any sequence