@@ -7,6 +7,7 @@ export(cbind)
 export(colMeans)
 export(colSums)
 export(colnames)
+export(compare_columns)
 export(compare_motifs)
 export(consensus_to_ppm)
 export(consensus_to_ppmAA)
